wrong color in ios fix

--- a/src/components/AddItem.css
+++ b/src/components/AddItem.css
@@ -100,4 +100,19 @@
   flex:1;
 }
 
+/* wrong color in ios fix */
+.add-button-stack button {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.3em 1em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  cursor: pointer;
+  transition: border-color 0.25s;
 
+  display: flex;
+  align-items: center;   
+  justify-content: center; 
+}
